schema/testdata/validation_reserved_action_name_reset_password_function/schema.keel
model User {
    fields {
        email Text
    }

    functions {
        create resetPassword() with (email)
    }
}

api Web {
    models {
        User
    }
}
