schema/testdata/errors/reserved_action_name_reset_password.keel
model User {
    fields {
        email Text
    }

    actions {
        //expect-error:16:29:E042:You have a reserved action name 'resetPassword'
        create resetPassword() with (email)
    }
}

api Web {
    models {
        User
    }
}
